Reduce text container width to prevent image overlap
- Reduced desktop text container from 570px to 500px
- Reduced tablet text container from 522px to 450px
- Prevents text from extending into image area
- Ensures clean separation between text and image

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 }
 
 .u-section-1 .u-group-1 {
-  width: 570px;
+  width: 500px;
   min-height: 484px;
   height: auto;
   margin: 95px 600px 0 0;
@@ -65,7 +65,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-group-1 {
-    width: 522px;
+    width: 450px;
     height: auto;
     margin-right: 580px;
   }
